# LambdaPlotter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: build_and_test.yml  cicd.yml  release.yml
assets/: Info.plist  icon.rc  lpicon.icns
include/BSP/: controller.h  plotView.h  serial.h  shared.h  telemetry.h  toolbar.h  window.h
include/LP/: controller.h  icon_data.h  plotView.h  serial.h  shared.h  telemetry.h  toolbar.h  window.h
include/common/: shared.h
src/: main.cpp
src/BSP/: app.cpp  app.h  controller.cpp  controller.h  plotView.cpp  serial.cpp  serial.h  shared.cpp  telemetry.cpp  telemetry.h  toolbar.cpp  toolbar.h  window.cpp  window.h
src/LP/: controller.cpp  icon_data.cpp  plotView.cpp  serial.cpp  shared.cpp  telemetry.cpp  toolbar.cpp  window.cpp
src/bindings/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
src/common/: defines.h  shared.cpp  shared.h
src/fonts/: lucide.c  lucide.cpp  lucide.h  roboto.c  roboto.cpp  roboto.h
src/implot/: implot.cpp  implot.h  implot_internal.h  implot_items.cpp
tests/: bsp_tests.cpp  telemetry_tests.cpp
